@@ -2,7 +2,7 @@ package com.sweetshop.config;
 
 import com.sweetshop.security.JwtAuthenticationFilter;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -25,51 +25,33 @@ public class SecurityConfig {
     public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter) {
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
     }
-
+    
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-
-        // ULTIMATE CORS FIX: Replacing the specific list of domains with '*'
-        // to accept connections from ANY Vercel or local URL.
-        config.setAllowedOrigins(Arrays.asList("*"));
-
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("*"));
-
-        // IMPORTANT: Set AllowCredentials to false when using AllowedOrigins: "*"
-        // The browser will often block credentials when '*' is used.
-        config.setAllowCredentials(false);
+        config.setAllowedOrigins(List.of("http://localhost:5173"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
     }
-
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            // Explicitly enable CORS
             .cors()
             .and()
-            .csrf().disable() // Disable CSRF
+            .csrf().disable()
             .sessionManagement(session ->
                 session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
             .authorizeHttpRequests(auth -> auth
-                // CRITICAL FIX: Allow all OPTIONS requests globally for CORS preflight checks
-                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-
-                // The unauthenticated paths (login/register)
                 .requestMatchers("/api/auth/**").permitAll()
-
-                // All other authenticated paths
                 .anyRequest().authenticated()
             )
-            .addFilterBefore(
-                jwtAuthenticationFilter,
-                UsernamePasswordAuthenticationFilter.class
-            );
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
